  * command line --ruby working again
  * OSX: buttons can be created that use non default height.


=== Developer Issues with 3.3.7
  * make/**/env.rb - link against distributed libyaml
  * Added lib/package/*  for mege packaging.
  * Using nsis 3.03 for Windows installer. Maintained and faster!
    with unicode and large string enables. Potential to break
    user written installers.
  * Better cross build rakefiles: xrpi, xmsys2 targets.
  
-------------- Shoes 3.3.6 -------------------------------

=== New with 3.3.6
  * Can set font and stroke color for Button, edit_line, edit_box,
    list_box and switch native widgets. 
    https://github.com/shoes/shoes3/issues/179

=== Fixed with 3.3.6
    Linux versions may not have workable symlinks to .so's
    https://github.com/shoes/shoes3/issues/392

=== Developer Issues with 3.3.6
  * remove undocumented game mode for shoes.terminal
  * fixed many gtk3 deprecations. 
  
  
-------------- Shoes 3.3.5 --------------------------------

=== New with 3.3.5
  * Add 'wheel' event 
    https://github.com/shoes/shoes3/issues/287
  * can preprocess events with new event {block}
    https://github.com/shoes/shoes3/issues/383
    https://github.com/shoes/shoes3/wiki/event-streams
    Experts Only 
    
=== Fixed with 3.3.5
  * Arch linux (probably others) are missing symlinks to libraries
    https://github.com/shoes/shoes3/issues/392
  * Windows cpu utilization
    https://github.com/shoes/shoes3/issues/387
  * OSX High Sierra (10.13) couldn't start Shoes
    https://github.com/shoes/shoes3/issues/398
  * Profiling has new output options for workaround
    https://github.com/shoes/shoes3/issues/390
    
=== Developer Issues with 3.3.5
  https://github.com/shoes/shoes3/issues/399
  * no Linux 32 bit provided.
  * last release for osx 10.9 (mavericks)
  * freebsd status is 'experts with free time'
 
-------------- Shoes 3.3.4 ---------------------------------  

=== New with 3.3.4