@@ -9,7 +9,7 @@ $(PKG)_SUBDIR   := ruby-$($(PKG)_VERSION)
 $(PKG)_FILE     := ruby-$($(PKG)_VERSION).tar.gz
 $(PKG)_URL      := https://cache.ruby-lang.org/pub/ruby/2.3/$($(PKG)_FILE)
 $(PKG)_URL_2    := https://cache.ruby-lang.org/pub/ruby/2.3/ruby-2.3.7.tar.gz
-$(PKG)_DEPS     := cc 
+$(PKG)_DEPS     := cc yaml libffi openssl1.0  gdbm 
 
 $(PKG)_DEPS_$(BUILD) := autotools 
 
@@ -19,7 +19,15 @@ define $(PKG)_UPDATE
 endef
 
 define $(PKG)_BUILD
+    # remove previous install - ruby has permissions that don't
+    # allow overwriting. 
+    rm -rfv '$(PREFIX)/$(TARGET)/include/ruby*'
+    rm -rf '$(PREFIX)/$(TARGET)/lib/ruby' 
+    rm -rfv '$(PREFIX)/$(TARGET)/lib/pkgconfig/ruby*.pc'
+    rm -rf '$(PREFIX)/$(TARGET)/bin/rake.bat'
+    rm -rf '$(PREFIX)/$(TARGET)/bin/rake'
     # build and install the library
+    export LDFLAGS="-L $(PREFIX)/$(TARGET)/bin -lyaml"
     cd '$(BUILD_DIR)' && $(SOURCE_DIR)/configure \
         $(MXE_CONFIGURE_OPTS) \
         --enable-shared \
