@@ -47,7 +47,11 @@
   * Using nsis 3.03 for Windows installer. Maintained and faster!
     with unicode and large string enables. Potential to break
     user written installers.
-  * Better cross build rakefiles: xrpi, xmsys2 targets.
+  * Better cross build rakefiles: xrpi, xwin7 and xmsys2 targets.
+  * Includes plugin for MXE to build all Windows dependencies
+    new target 'mxe' is not mainstream yet but will become the preferred
+    method of cross compiling for Windows.
+    https://github.com/shoes/shoes3/wiki/MXE-Dependencies
   
 -------------- Shoes 3.3.6 -------------------------------
 
